Changes in list all users service